tests/fail/null_access.tk
// Copyright (c) 2025 YiZhonghua<zhyi@dpai.com>. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
shape Data (v: i32)
fn main() -> i32 {
    auto nul ^p: Data = nullptr // new Data(v = 42)
    auto x = p.v // EXPECT: error[E0447]: Accessing member of nullable type '^?Data' requires explicit 'is' check
    
    return 0
}
